# team-on

./: .gitignore  DEVELOPMENT.md  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  qa_test.md  refactor.md  tech_debt.md
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/scripts/: load_env.sh
backend/src/: config.py
backend/src/application/common/: __init__.py  constants.py  exception_translators.py  exceptions.py  logging_config.py  logging_filters.py  response.py
backend/src/domain/common/: __init__.py  base.py  exceptions.py
backend/src/domain/identity/: base.py
backend/src/domain/identity/entities/: __init__.py  company.py  mappings.py  organization.py  user.py
backend/src/presentation/api/: __init__.py  error_handlers.py  main.py
backend/tests/: conftest.py
backend/tests/application/: test_exception_translators.py  test_exceptions.py
backend/tests/domain/: test_domain_exceptions.py
docs/dev/: MOBILE-INSTALL.md
docs/exception-handling/: README.md  architecture.md  error-codes.md  logging-guide.md  usage-guide.md
infrastructure/monitoring/grafana/provisioning/dashboards/: teamon.json
infrastructure/monitoring/prometheus/: prometheus.yml
k8s/: backend-deployment.yml
tests/application/: test_exceptions.py
