[tool.poetry]
name = "teamon-backend"
version = "0.1.0"
description = "TeamOn Backend Service"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
redis = "^5.0.1"
pydantic = {extras = ["email"], version = "^2.4.2"}
python-docx = "^1.0.1"
reportlab = "^4.0.7"
firebase-admin = "^6.2.0"
prometheus-client = "^0.18.0"
sentry-sdk = "^1.32.0"
elasticsearch = "^8.10.1"
whisper = "^1.1.10"
keybert = "^0.7.0"
pandas = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.10.1"
isort = "^5.12.0"
mypy = "^1.6.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 